syntax = "proto3";
package dymensionxyz.dymension.eibc;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/eibc/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  string epoch_identifier = 1
      [ (gogoproto.moretags) = "yaml:\"epoch_identifier\"" ];
  string timeout_fee = 2 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"timeout_fee\"",
    (gogoproto.nullable) = false
  ];
  string errack_fee = 3 [
    (cosmos_proto.scalar) = "cosmos.LegacyDec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"errack_fee\"",
    (gogoproto.nullable) = false
  ];
}
